<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin_padding_16dp"
    android:paddingRight="@dimen/margin_padding_16dp"
    android:paddingLeft="@dimen/margin_padding_16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_8dp"
        tools:text="@string/placeholder_todo_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_8dp"
        tools:text="@string/placeholder_todo_summary"
        android:maxLines="1"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="@dimen/text_size_16"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_16dp"
        tools:text="@string/placeholder_todo_date"
        android:textColor="@color/colorAccent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"/>
</LinearLayout>