<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackground"
    tools:context="com.fanjavaid.android.cooltodo.DetailActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/margin_padding_16dp"
        app:srcCompat="@drawable/ic_create_white_24dp"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_padding_16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_padding_8dp"
                    tools:text="@string/placeholder_todo_title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_20"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_padding_16dp"
                    tools:text="@string/placeholder_todo_date"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_padding_8dp"
                    tools:text="@string/placeholder_todo_summary"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="@dimen/text_size_16"/>

            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>
